namespace/llm/vllm/lucy-128k/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-lucy-128k
  namespace: llm
  labels:
    app.kubernetes.io/name: lucy-128k
spec:
  ports:
  - name: http-lucy-128k
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: vllm-lucy-128k
  sessionAffinity: None
  type: ClusterIP
