namespace/llm/vllm/lucy-128k/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lucy-128k-https
  namespace: llm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lucy-128k.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: http-lucy-128k
          port: 80
          passHostHeader: true
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lucy-128k-http
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lucy-128k.oglesby.io`)
      kind: Rule
      services:
        - name: http-lucy-128k
          port: 80
          passHostHeader: true
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
